tests/neg/i12049.check
-- [E007] Type Mismatch Error: tests/neg/i12049.scala:6:16 -------------------------------------------------------------
6 |val x: String = ??? : M[B] // error
  |                ^^^^^^^^^^
  |                Found:    M[B]
  |                Required: String
  |
  |                Note: a match type could not be fully reduced:
  |
  |                  trying to reduce  M[B]
  |                  failed since selector  B
  |                  does not match  case A => Int
  |                  and cannot be shown to be disjoint from it either.
  |                  Therefore, reduction cannot advance to the remaining case
  |
  |                    case B => String
  |
  | longer explanation available when compiling with `-explain`
-- Error: tests/neg/i12049.scala:14:23 ---------------------------------------------------------------------------------
14 |val y3: String = ??? : Last[Int *: Int *: Boolean *: String *: EmptyTuple]  // error
   |                       ^
   |                       Match type reduction failed since selector  EmptyTuple.type
   |                       matches none of the cases
   |
   |                           case _ *: _ *: t => Last[t]
   |                           case t *: EmptyTuple => t
-- Error: tests/neg/i12049.scala:22:26 ---------------------------------------------------------------------------------
22 |val z3: (A, B, A) = ??? : Reverse[(A, B, A)] // error
   |                          ^
   |                          Match type reduction failed since selector  A *: EmptyTuple.type
   |                          matches none of the cases
   |
   |                              case t1 *: t2 *: ts => Tuple.Concat[Reverse[ts], (t2, t1)]
   |                              case EmptyTuple => EmptyTuple
-- Error: tests/neg/i12049.scala:24:20 ---------------------------------------------------------------------------------
24 |val _ = summon[M[B]]  // error
   |                    ^
   |                    No given instance of type M[B] was found for parameter x of method summon in object Predef
   |
   |                    Note: a match type could not be fully reduced:
   |
   |                      trying to reduce  M[B]
   |                      failed since selector  B
   |                      does not match  case A => Int
   |                      and cannot be shown to be disjoint from it either.
   |                      Therefore, reduction cannot advance to the remaining case
   |
   |                        case B => String
-- Error: tests/neg/i12049.scala:25:26 ---------------------------------------------------------------------------------
25 |val _ = summon[String =:= Last[Int *: Int *: Boolean *: String *: EmptyTuple]] // error
   |                          ^
   |                          Match type reduction failed since selector  EmptyTuple.type
   |                          matches none of the cases
   |
   |                              case _ *: _ *: t => Last[t]
   |                              case t *: EmptyTuple => t
-- Error: tests/neg/i12049.scala:26:29 ---------------------------------------------------------------------------------
26 |val _ = summon[(A, B, A) =:= Reverse[(A, B, A)]] // error
   |                             ^
   |                             Match type reduction failed since selector  A *: EmptyTuple.type
   |                             matches none of the cases
   |
   |                                 case t1 *: t2 *: ts => Tuple.Concat[Reverse[ts], (t2, t1)]
   |                                 case EmptyTuple => EmptyTuple
-- [E008] Not Found Error: tests/neg/i12049.scala:28:21 ----------------------------------------------------------------
28 |val _ = (??? : M[B]).length // error
   |        ^^^^^^^^^^^^^^^^^^^
   |        value length is not a member of M[B]
   |
   |        Note: a match type could not be fully reduced:
   |
   |          trying to reduce  M[B]
   |          failed since selector  B
   |          does not match  case A => Int
   |          and cannot be shown to be disjoint from it either.
   |          Therefore, reduction cannot advance to the remaining case
   |
   |            case B => String
